fix(graylog) : disabling opensearch and mongodb | increasing memory request and limit
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/opensearch/values.yaml
+++ b/argocd-helm-charts/opensearch/values.yaml
@@ -1,4 +1,10 @@
----
+resources:
+  requests:
+    cpu: "1000m"
+    memory: "4Gi"
+  limits:
+    memory: "6Gi"
+
 backup:
   enable: false
   # name: opensearch-backup
@@ -14,7 +20,7 @@ opensearch:
   # Helm chart points to 1.3.2, we want to use latest as of now which is 1.3.6
   extraEnvs:
     - name: DISABLE_INSTALL_DEMO_CONFIG
-      value: 'false'
+      value: "false"
 serviceMonitor:
   enabled: false
   path: /metrics
