fix: change blackbox probe static config type from string to array
Signed-off-by: Sidharth Jawale <sidharth@obmondo.com>

--- a/argocd-helm-charts/puppetserver/templates/blackbox-probe.yaml
+++ b/argocd-helm-charts/puppetserver/templates/blackbox-probe.yaml
@@ -10,5 +10,6 @@ spec:
     url: blackbox-exporter.monitoring.svc.cluster.local:19115
   targets:
     staticConfig:
-      static: https://{{ (((((.Values).puppetserver).puppetserver).masters).fqdns).alternateServerNames }}
+      static:
+        - https://{{ (((((.Values).puppetserver).puppetserver).masters).fqdns).alternateServerNames }}
 {{- end}}
