--- a/argocd-helm-charts/netbird/Chart.yaml
+++ b/argocd-helm-charts/netbird/Chart.yaml
@@ -1,9 +1,15 @@
 apiVersion: v2
 name: netbird
 version: 1.0.0
-#dependencies:
+dependencies:
   # Manually copied from
   # https://github.com/jaconi-io/helm-charts.git@62bbba55c48f20e812d9622072778af9cc6a37d1
-#  - name: netbird
-#  - name: netbird-dashboard
-#  - name: coturn
+  - name: netbird
+    version: 0.15.0
+    repository: https://charts.jaconi.io
+  - name: netbird-dashboard
+    version: 1.2.0
+    repository: https://charts.jaconi.io
+  - name: coturn
+    version: 1.0.3
+    repository: https://charts.jaconi.io
