--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/MachineDeployment.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/MachineDeployment.yaml
@@ -55,7 +55,31 @@ metadata:
   name: {{ printf "%s-%s" $.Values.global.clusterName $nodeGroup.name }}
 spec:
   clusterName: {{ $.Values.global.clusterName }}
+  replicas: {{ len $nodeGroup.bareMetalHosts }}
 
-  {{/* TODO */}}
+  template:
+    {{- if $nodeGroup.labels }}
+    metadata:
+      # Label should meet one of the following criterias to propagate to Node :
+      #
+      # (1) Has node-role.kubernetes.io as prefix.
+      # (2) Belongs to node-restriction.kubernetes.io domain.
+      # (3) Belongs to node.cluster.x-k8s.io domain.
+      #
+      # REFER : https://cluster-api.sigs.k8s.io/developer/architecture/controllers/metadata-propagation#machine
+      labels: {{- toYaml $nodeGroup.labels | nindent 8 }}
+    {{- end }}
+    spec:
+      clusterName: {{ $.Values.global.clusterName }}
+      version: {{ $.Values.global.kubernetes.version }}
+      bootstrap:
+        configRef:
+          apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
+          kind: KubeadmConfigTemplate
+          name: {{ printf "%s-%s" $.Values.global.clusterName $nodeGroup.name }}
+      infrastructureRef:
+        apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
+        kind: HetznerBareMetalMachineTemplate
+        name: {{ printf "%s-%s" $.Values.global.clusterName $nodeGroup.name }}
 {{- end }}
 {{- end }}
