--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/MachineHealthCheck.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/MachineHealthCheck.yaml
@@ -23,3 +23,29 @@ spec:
     timeout: 3m0s
     type: Ready
 {{- end }}
+
+{{/* Handling control-plane in Hetzner bare-metal. */}}
+{{- if eq .Values.mode "bare-metal" }}
+apiVersion: cluster.x-k8s.io/v1beta1
+kind: MachineHealthCheck
+metadata:
+  name: {{ .Values.global.clusterName }}-control-plane-unhealthy-5m
+spec:
+  clusterName: {{ .Values.global.clusterName }}
+  maxUnhealthy: 100%
+  nodeStartupTimeout: 15m0s
+  remediationTemplate:
+    apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
+    kind: HCloudRemediationTemplate
+    name: control-plane-remediation-request
+  selector:
+    matchLabels:
+      cluster.x-k8s.io/control-plane: ""
+  unhealthyConditions:
+  - status: Unknown
+    timeout: 3m0s
+    type: Ready
+  - status: "False"
+    timeout: 3m0s
+    type: Ready
+{{- end }}
