fix: hetzner-robot helm chart only if control plane is more then 1 and removed the Archi kubeaid clone

--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/KubeadmControlPlane.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/KubeadmControlPlane.yaml
@@ -247,7 +247,7 @@ spec:
       - curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
 
       # Clone KubeAid.
-      - git clone https://github.com/Archisman-Mridha/kubeaid.git
+      - git clone https://github.com/Obmondo/kubeaid.git
 
       # Copy kubeconfig to ~/.kube/config
       - mkdir -p $HOME/.kube
@@ -270,7 +270,7 @@ spec:
       # Install Hetzner Cloud Controller Manager.
       - helm template kubeaid/argocd-helm-charts/ccm-hetzner --values kubeaid/argocd-helm-charts/ccm-hetzner/values.yaml --namespace kube-system | kubectl apply -f -
 
-      {{- if eq .Values.mode "bare-metal" }}
+      {{- if and (eq .Values.mode "bare-metal") (gt (len $.Values.controlPlane.bareMetalHosts) 1) }}
       # Install Hetzner Failover Script
       - |
         helm template kubeaid/argocd-helm-charts/hetzner-robot \
