fix: cilium can figure out the k8s service host by itself using a configmap and kubeaid clone should checkout to a latest tag of kubeaid

--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/KubeadmControlPlane.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/KubeadmControlPlane.yaml
@@ -249,6 +249,9 @@ spec:
       # Clone KubeAid.
       - git clone https://github.com/Obmondo/kubeaid.git
 
+      # Checkout to latest tag
+      - git checkout $(git describe --tags `git rev-list --tags --max-count=1`)
+
       # Copy kubeconfig to ~/.kube/config
       - mkdir -p $HOME/.kube
       - sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
