--- a/argocd-helm-charts/opendesk/values.yaml
+++ b/argocd-helm-charts/opendesk/values.yaml
@@ -5,3 +5,12 @@ opendesk:
       namespace: opendesk
     source:
       targetRevision: v1.4.0
+  openDesk:
+    overwrites:
+      element:
+        extraEnvVars:
+          - name: "UVS_ACCESS_TOKEN"
+            valueFrom:
+              secretKeyRef:
+                name: "opendesk-matrix-user-verification-service-account"
+                key: "password"
