fix: lets have cilium operator running with 1 replica as a default

--- a/argocd-helm-charts/cilium/values.yaml
+++ b/argocd-helm-charts/cilium/values.yaml
@@ -1,5 +1,6 @@
 cilium:
   operator:
+    replicas: 1
     rollOutPods: true
     priorityClassName: "system-node-critical"
   kubeProxyReplacement: "true"
